// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@app: application wrapper check * contains style property in state 1`] = `
Object {
  "Radio": Object {
    "meta": Object {
      "appearances": Object {
        "default": Object {
          "default": true,
        },
      },
      "parameters": Object {
        "borderColor": Object {
          "type": "string",
        },
        "borderRadius": Object {
          "type": "number",
        },
        "borderWidth": Object {
          "type": "number",
        },
        "height": Object {
          "type": "number",
        },
        "highlightBackgroundColor": Object {
          "type": "string",
        },
        "highlightBorderRadius": Object {
          "type": "number",
        },
        "highlightHeight": Object {
          "type": "number",
        },
        "highlightWidth": Object {
          "type": "number",
        },
        "selectBackgroundColor": Object {
          "type": "string",
        },
        "selectBorderRadius": Object {
          "type": "number",
        },
        "selectHeight": Object {
          "type": "number",
        },
        "selectWidth": Object {
          "type": "number",
        },
        "textColor": Object {
          "type": "string",
        },
        "textFontSize": Object {
          "type": "number",
        },
        "textFontWeight": Object {
          "type": "string",
        },
        "textMarginLeft": Object {
          "type": "number",
        },
        "width": Object {
          "type": "number",
        },
      },
      "scope": "all",
      "states": Object {
        "active": Object {
          "default": false,
          "priority": 2,
          "scope": "all",
        },
        "checked": Object {
          "default": false,
          "priority": 0,
          "scope": "all",
        },
        "disabled": Object {
          "default": false,
          "priority": 1,
          "scope": "all",
        },
      },
      "variantGroups": Object {
        "size": Object {
          "large": Object {
            "default": false,
          },
          "medium": Object {
            "default": true,
          },
          "small": Object {
            "default": false,
          },
        },
        "status": Object {
          "error": Object {
            "default": false,
          },
        },
      },
    },
    "styles": Object {
      "default": Object {
        "borderColor": "gray-primary",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "text-primary",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.active": Object {
        "borderColor": "gray-dark",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "text-primary",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.checked": Object {
        "borderColor": "blue-primary",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "blue-primary",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "text-primary",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.checked.active": Object {
        "borderColor": "blue-dark",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "blue-primary",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "text-primary",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.checked.disabled": Object {
        "borderColor": "gray-light",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "gray-primary",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "gray-300",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.checked.disabled.active": Object {
        "borderColor": "blue-dark",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "gray-primary",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "gray-300",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.disabled": Object {
        "borderColor": "gray-light",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "gray-300",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.disabled.active": Object {
        "borderColor": "gray-dark",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "gray-300",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.error": Object {
        "borderColor": "pink-primary",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "text-primary",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.error.active": Object {
        "borderColor": "gray-dark",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "text-primary",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.error.checked": Object {
        "borderColor": "pink-primary",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "pink-primary",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "text-primary",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.error.checked.active": Object {
        "borderColor": "pink-primary",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "pink-primary",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "text-primary",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.error.checked.disabled": Object {
        "borderColor": "gray-light",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "gray-primary",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "gray-300",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.error.checked.disabled.active": Object {
        "borderColor": "pink-primary",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "gray-primary",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "gray-300",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.error.disabled": Object {
        "borderColor": "gray-light",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "gray-300",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.error.disabled.active": Object {
        "borderColor": "gray-dark",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "gray-300",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.error.large": Object {
        "borderColor": "pink-primary",
        "borderRadius": 21,
        "borderWidth": 2,
        "height": 42,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 35,
        "highlightHeight": 70,
        "highlightWidth": 70,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 14,
        "selectHeight": 28,
        "selectWidth": 28,
        "textColor": "text-primary",
        "textFontSize": 18,
        "textFontWeight": "500",
        "textMarginLeft": 14,
        "width": 42,
      },
      "default.error.large.active": Object {
        "borderColor": "gray-dark",
        "borderRadius": 21,
        "borderWidth": 2,
        "height": 42,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 35,
        "highlightHeight": 70,
        "highlightWidth": 70,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 14,
        "selectHeight": 28,
        "selectWidth": 28,
        "textColor": "text-primary",
        "textFontSize": 18,
        "textFontWeight": "500",
        "textMarginLeft": 14,
        "width": 42,
      },
      "default.error.large.checked": Object {
        "borderColor": "pink-primary",
        "borderRadius": 21,
        "borderWidth": 2,
        "height": 42,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 35,
        "highlightHeight": 70,
        "highlightWidth": 70,
        "selectBackgroundColor": "pink-primary",
        "selectBorderRadius": 14,
        "selectHeight": 28,
        "selectWidth": 28,
        "textColor": "text-primary",
        "textFontSize": 18,
        "textFontWeight": "500",
        "textMarginLeft": 14,
        "width": 42,
      },
      "default.error.large.checked.active": Object {
        "borderColor": "pink-primary",
        "borderRadius": 21,
        "borderWidth": 2,
        "height": 42,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 35,
        "highlightHeight": 70,
        "highlightWidth": 70,
        "selectBackgroundColor": "pink-primary",
        "selectBorderRadius": 14,
        "selectHeight": 28,
        "selectWidth": 28,
        "textColor": "text-primary",
        "textFontSize": 18,
        "textFontWeight": "500",
        "textMarginLeft": 14,
        "width": 42,
      },
      "default.error.large.checked.disabled": Object {
        "borderColor": "gray-light",
        "borderRadius": 21,
        "borderWidth": 2,
        "height": 42,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 35,
        "highlightHeight": 70,
        "highlightWidth": 70,
        "selectBackgroundColor": "gray-primary",
        "selectBorderRadius": 14,
        "selectHeight": 28,
        "selectWidth": 28,
        "textColor": "gray-300",
        "textFontSize": 18,
        "textFontWeight": "500",
        "textMarginLeft": 14,
        "width": 42,
      },
      "default.error.large.checked.disabled.active": Object {
        "borderColor": "pink-primary",
        "borderRadius": 21,
        "borderWidth": 2,
        "height": 42,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 35,
        "highlightHeight": 70,
        "highlightWidth": 70,
        "selectBackgroundColor": "gray-primary",
        "selectBorderRadius": 14,
        "selectHeight": 28,
        "selectWidth": 28,
        "textColor": "gray-300",
        "textFontSize": 18,
        "textFontWeight": "500",
        "textMarginLeft": 14,
        "width": 42,
      },
      "default.error.large.disabled": Object {
        "borderColor": "gray-light",
        "borderRadius": 21,
        "borderWidth": 2,
        "height": 42,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 35,
        "highlightHeight": 70,
        "highlightWidth": 70,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 14,
        "selectHeight": 28,
        "selectWidth": 28,
        "textColor": "gray-300",
        "textFontSize": 18,
        "textFontWeight": "500",
        "textMarginLeft": 14,
        "width": 42,
      },
      "default.error.large.disabled.active": Object {
        "borderColor": "gray-dark",
        "borderRadius": 21,
        "borderWidth": 2,
        "height": 42,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 35,
        "highlightHeight": 70,
        "highlightWidth": 70,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 14,
        "selectHeight": 28,
        "selectWidth": 28,
        "textColor": "gray-300",
        "textFontSize": 18,
        "textFontWeight": "500",
        "textMarginLeft": 14,
        "width": 42,
      },
      "default.error.medium": Object {
        "borderColor": "pink-primary",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "text-primary",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.error.medium.active": Object {
        "borderColor": "gray-dark",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "text-primary",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.error.medium.checked": Object {
        "borderColor": "pink-primary",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "pink-primary",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "text-primary",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.error.medium.checked.active": Object {
        "borderColor": "pink-primary",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "pink-primary",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "text-primary",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.error.medium.checked.disabled": Object {
        "borderColor": "gray-light",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "gray-primary",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "gray-300",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.error.medium.checked.disabled.active": Object {
        "borderColor": "pink-primary",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "gray-primary",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "gray-300",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.error.medium.disabled": Object {
        "borderColor": "gray-light",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "gray-300",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.error.medium.disabled.active": Object {
        "borderColor": "gray-dark",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "gray-300",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.error.small": Object {
        "borderColor": "pink-primary",
        "borderRadius": 15,
        "borderWidth": 2,
        "height": 30,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 25,
        "highlightHeight": 50,
        "highlightWidth": 50,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 10,
        "selectHeight": 20,
        "selectWidth": 20,
        "textColor": "text-primary",
        "textFontSize": 14,
        "textFontWeight": "500",
        "textMarginLeft": 10,
        "width": 30,
      },
      "default.error.small.active": Object {
        "borderColor": "gray-dark",
        "borderRadius": 15,
        "borderWidth": 2,
        "height": 30,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 25,
        "highlightHeight": 50,
        "highlightWidth": 50,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 10,
        "selectHeight": 20,
        "selectWidth": 20,
        "textColor": "text-primary",
        "textFontSize": 14,
        "textFontWeight": "500",
        "textMarginLeft": 10,
        "width": 30,
      },
      "default.error.small.checked": Object {
        "borderColor": "pink-primary",
        "borderRadius": 15,
        "borderWidth": 2,
        "height": 30,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 25,
        "highlightHeight": 50,
        "highlightWidth": 50,
        "selectBackgroundColor": "pink-primary",
        "selectBorderRadius": 10,
        "selectHeight": 20,
        "selectWidth": 20,
        "textColor": "text-primary",
        "textFontSize": 14,
        "textFontWeight": "500",
        "textMarginLeft": 10,
        "width": 30,
      },
      "default.error.small.checked.active": Object {
        "borderColor": "pink-primary",
        "borderRadius": 15,
        "borderWidth": 2,
        "height": 30,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 25,
        "highlightHeight": 50,
        "highlightWidth": 50,
        "selectBackgroundColor": "pink-primary",
        "selectBorderRadius": 10,
        "selectHeight": 20,
        "selectWidth": 20,
        "textColor": "text-primary",
        "textFontSize": 14,
        "textFontWeight": "500",
        "textMarginLeft": 10,
        "width": 30,
      },
      "default.error.small.checked.disabled": Object {
        "borderColor": "gray-light",
        "borderRadius": 15,
        "borderWidth": 2,
        "height": 30,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 25,
        "highlightHeight": 50,
        "highlightWidth": 50,
        "selectBackgroundColor": "gray-primary",
        "selectBorderRadius": 10,
        "selectHeight": 20,
        "selectWidth": 20,
        "textColor": "gray-300",
        "textFontSize": 14,
        "textFontWeight": "500",
        "textMarginLeft": 10,
        "width": 30,
      },
      "default.error.small.checked.disabled.active": Object {
        "borderColor": "pink-primary",
        "borderRadius": 15,
        "borderWidth": 2,
        "height": 30,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 25,
        "highlightHeight": 50,
        "highlightWidth": 50,
        "selectBackgroundColor": "gray-primary",
        "selectBorderRadius": 10,
        "selectHeight": 20,
        "selectWidth": 20,
        "textColor": "gray-300",
        "textFontSize": 14,
        "textFontWeight": "500",
        "textMarginLeft": 10,
        "width": 30,
      },
      "default.error.small.disabled": Object {
        "borderColor": "gray-light",
        "borderRadius": 15,
        "borderWidth": 2,
        "height": 30,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 25,
        "highlightHeight": 50,
        "highlightWidth": 50,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 10,
        "selectHeight": 20,
        "selectWidth": 20,
        "textColor": "gray-300",
        "textFontSize": 14,
        "textFontWeight": "500",
        "textMarginLeft": 10,
        "width": 30,
      },
      "default.error.small.disabled.active": Object {
        "borderColor": "gray-dark",
        "borderRadius": 15,
        "borderWidth": 2,
        "height": 30,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 25,
        "highlightHeight": 50,
        "highlightWidth": 50,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 10,
        "selectHeight": 20,
        "selectWidth": 20,
        "textColor": "gray-300",
        "textFontSize": 14,
        "textFontWeight": "500",
        "textMarginLeft": 10,
        "width": 30,
      },
      "default.large": Object {
        "borderColor": "gray-primary",
        "borderRadius": 21,
        "borderWidth": 2,
        "height": 42,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 35,
        "highlightHeight": 70,
        "highlightWidth": 70,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 14,
        "selectHeight": 28,
        "selectWidth": 28,
        "textColor": "text-primary",
        "textFontSize": 18,
        "textFontWeight": "500",
        "textMarginLeft": 14,
        "width": 42,
      },
      "default.large.active": Object {
        "borderColor": "gray-dark",
        "borderRadius": 21,
        "borderWidth": 2,
        "height": 42,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 35,
        "highlightHeight": 70,
        "highlightWidth": 70,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 14,
        "selectHeight": 28,
        "selectWidth": 28,
        "textColor": "text-primary",
        "textFontSize": 18,
        "textFontWeight": "500",
        "textMarginLeft": 14,
        "width": 42,
      },
      "default.large.checked": Object {
        "borderColor": "blue-primary",
        "borderRadius": 21,
        "borderWidth": 2,
        "height": 42,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 35,
        "highlightHeight": 70,
        "highlightWidth": 70,
        "selectBackgroundColor": "blue-primary",
        "selectBorderRadius": 14,
        "selectHeight": 28,
        "selectWidth": 28,
        "textColor": "text-primary",
        "textFontSize": 18,
        "textFontWeight": "500",
        "textMarginLeft": 14,
        "width": 42,
      },
      "default.large.checked.active": Object {
        "borderColor": "blue-dark",
        "borderRadius": 21,
        "borderWidth": 2,
        "height": 42,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 35,
        "highlightHeight": 70,
        "highlightWidth": 70,
        "selectBackgroundColor": "blue-primary",
        "selectBorderRadius": 14,
        "selectHeight": 28,
        "selectWidth": 28,
        "textColor": "text-primary",
        "textFontSize": 18,
        "textFontWeight": "500",
        "textMarginLeft": 14,
        "width": 42,
      },
      "default.large.checked.disabled": Object {
        "borderColor": "gray-light",
        "borderRadius": 21,
        "borderWidth": 2,
        "height": 42,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 35,
        "highlightHeight": 70,
        "highlightWidth": 70,
        "selectBackgroundColor": "gray-primary",
        "selectBorderRadius": 14,
        "selectHeight": 28,
        "selectWidth": 28,
        "textColor": "gray-300",
        "textFontSize": 18,
        "textFontWeight": "500",
        "textMarginLeft": 14,
        "width": 42,
      },
      "default.large.checked.disabled.active": Object {
        "borderColor": "blue-dark",
        "borderRadius": 21,
        "borderWidth": 2,
        "height": 42,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 35,
        "highlightHeight": 70,
        "highlightWidth": 70,
        "selectBackgroundColor": "gray-primary",
        "selectBorderRadius": 14,
        "selectHeight": 28,
        "selectWidth": 28,
        "textColor": "gray-300",
        "textFontSize": 18,
        "textFontWeight": "500",
        "textMarginLeft": 14,
        "width": 42,
      },
      "default.large.disabled": Object {
        "borderColor": "gray-light",
        "borderRadius": 21,
        "borderWidth": 2,
        "height": 42,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 35,
        "highlightHeight": 70,
        "highlightWidth": 70,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 14,
        "selectHeight": 28,
        "selectWidth": 28,
        "textColor": "gray-300",
        "textFontSize": 18,
        "textFontWeight": "500",
        "textMarginLeft": 14,
        "width": 42,
      },
      "default.large.disabled.active": Object {
        "borderColor": "gray-dark",
        "borderRadius": 21,
        "borderWidth": 2,
        "height": 42,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 35,
        "highlightHeight": 70,
        "highlightWidth": 70,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 14,
        "selectHeight": 28,
        "selectWidth": 28,
        "textColor": "gray-300",
        "textFontSize": 18,
        "textFontWeight": "500",
        "textMarginLeft": 14,
        "width": 42,
      },
      "default.medium": Object {
        "borderColor": "gray-primary",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "text-primary",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.medium.active": Object {
        "borderColor": "gray-dark",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "text-primary",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.medium.checked": Object {
        "borderColor": "blue-primary",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "blue-primary",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "text-primary",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.medium.checked.active": Object {
        "borderColor": "blue-dark",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "blue-primary",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "text-primary",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.medium.checked.disabled": Object {
        "borderColor": "gray-light",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "gray-primary",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "gray-300",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.medium.checked.disabled.active": Object {
        "borderColor": "blue-dark",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "gray-primary",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "gray-300",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.medium.disabled": Object {
        "borderColor": "gray-light",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "gray-300",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.medium.disabled.active": Object {
        "borderColor": "gray-dark",
        "borderRadius": 18,
        "borderWidth": 2,
        "height": 36,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 30,
        "highlightHeight": 60,
        "highlightWidth": 60,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 12,
        "selectHeight": 24,
        "selectWidth": 24,
        "textColor": "gray-300",
        "textFontSize": 16,
        "textFontWeight": "500",
        "textMarginLeft": 12,
        "width": 36,
      },
      "default.small": Object {
        "borderColor": "gray-primary",
        "borderRadius": 15,
        "borderWidth": 2,
        "height": 30,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 25,
        "highlightHeight": 50,
        "highlightWidth": 50,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 10,
        "selectHeight": 20,
        "selectWidth": 20,
        "textColor": "text-primary",
        "textFontSize": 14,
        "textFontWeight": "500",
        "textMarginLeft": 10,
        "width": 30,
      },
      "default.small.active": Object {
        "borderColor": "gray-dark",
        "borderRadius": 15,
        "borderWidth": 2,
        "height": 30,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 25,
        "highlightHeight": 50,
        "highlightWidth": 50,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 10,
        "selectHeight": 20,
        "selectWidth": 20,
        "textColor": "text-primary",
        "textFontSize": 14,
        "textFontWeight": "500",
        "textMarginLeft": 10,
        "width": 30,
      },
      "default.small.checked": Object {
        "borderColor": "blue-primary",
        "borderRadius": 15,
        "borderWidth": 2,
        "height": 30,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 25,
        "highlightHeight": 50,
        "highlightWidth": 50,
        "selectBackgroundColor": "blue-primary",
        "selectBorderRadius": 10,
        "selectHeight": 20,
        "selectWidth": 20,
        "textColor": "text-primary",
        "textFontSize": 14,
        "textFontWeight": "500",
        "textMarginLeft": 10,
        "width": 30,
      },
      "default.small.checked.active": Object {
        "borderColor": "blue-dark",
        "borderRadius": 15,
        "borderWidth": 2,
        "height": 30,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 25,
        "highlightHeight": 50,
        "highlightWidth": 50,
        "selectBackgroundColor": "blue-primary",
        "selectBorderRadius": 10,
        "selectHeight": 20,
        "selectWidth": 20,
        "textColor": "text-primary",
        "textFontSize": 14,
        "textFontWeight": "500",
        "textMarginLeft": 10,
        "width": 30,
      },
      "default.small.checked.disabled": Object {
        "borderColor": "gray-light",
        "borderRadius": 15,
        "borderWidth": 2,
        "height": 30,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 25,
        "highlightHeight": 50,
        "highlightWidth": 50,
        "selectBackgroundColor": "gray-primary",
        "selectBorderRadius": 10,
        "selectHeight": 20,
        "selectWidth": 20,
        "textColor": "gray-300",
        "textFontSize": 14,
        "textFontWeight": "500",
        "textMarginLeft": 10,
        "width": 30,
      },
      "default.small.checked.disabled.active": Object {
        "borderColor": "blue-dark",
        "borderRadius": 15,
        "borderWidth": 2,
        "height": 30,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 25,
        "highlightHeight": 50,
        "highlightWidth": 50,
        "selectBackgroundColor": "gray-primary",
        "selectBorderRadius": 10,
        "selectHeight": 20,
        "selectWidth": 20,
        "textColor": "gray-300",
        "textFontSize": 14,
        "textFontWeight": "500",
        "textMarginLeft": 10,
        "width": 30,
      },
      "default.small.disabled": Object {
        "borderColor": "gray-light",
        "borderRadius": 15,
        "borderWidth": 2,
        "height": 30,
        "highlightBackgroundColor": "transparent",
        "highlightBorderRadius": 25,
        "highlightHeight": 50,
        "highlightWidth": 50,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 10,
        "selectHeight": 20,
        "selectWidth": 20,
        "textColor": "gray-300",
        "textFontSize": 14,
        "textFontWeight": "500",
        "textMarginLeft": 10,
        "width": 30,
      },
      "default.small.disabled.active": Object {
        "borderColor": "gray-dark",
        "borderRadius": 15,
        "borderWidth": 2,
        "height": 30,
        "highlightBackgroundColor": "gray-light",
        "highlightBorderRadius": 25,
        "highlightHeight": 50,
        "highlightWidth": 50,
        "selectBackgroundColor": "transparent",
        "selectBorderRadius": 10,
        "selectHeight": 20,
        "selectWidth": 20,
        "textColor": "gray-300",
        "textFontSize": 14,
        "textFontWeight": "500",
        "textMarginLeft": 10,
        "width": 30,
      },
    },
  },
}
`;

exports[`@app: application wrapper check * renders properly 1`] = `
<StyleProvider
  styles={
    Object {
      "Radio": Object {
        "meta": Object {
          "appearances": Object {
            "default": Object {
              "default": true,
            },
          },
          "parameters": Object {
            "borderColor": Object {
              "type": "string",
            },
            "borderRadius": Object {
              "type": "number",
            },
            "borderWidth": Object {
              "type": "number",
            },
            "height": Object {
              "type": "number",
            },
            "highlightBackgroundColor": Object {
              "type": "string",
            },
            "highlightBorderRadius": Object {
              "type": "number",
            },
            "highlightHeight": Object {
              "type": "number",
            },
            "highlightWidth": Object {
              "type": "number",
            },
            "selectBackgroundColor": Object {
              "type": "string",
            },
            "selectBorderRadius": Object {
              "type": "number",
            },
            "selectHeight": Object {
              "type": "number",
            },
            "selectWidth": Object {
              "type": "number",
            },
            "textColor": Object {
              "type": "string",
            },
            "textFontSize": Object {
              "type": "number",
            },
            "textFontWeight": Object {
              "type": "string",
            },
            "textMarginLeft": Object {
              "type": "number",
            },
            "width": Object {
              "type": "number",
            },
          },
          "scope": "all",
          "states": Object {
            "active": Object {
              "default": false,
              "priority": 2,
              "scope": "all",
            },
            "checked": Object {
              "default": false,
              "priority": 0,
              "scope": "all",
            },
            "disabled": Object {
              "default": false,
              "priority": 1,
              "scope": "all",
            },
          },
          "variantGroups": Object {
            "size": Object {
              "large": Object {
                "default": false,
              },
              "medium": Object {
                "default": true,
              },
              "small": Object {
                "default": false,
              },
            },
            "status": Object {
              "error": Object {
                "default": false,
              },
            },
          },
        },
        "styles": Object {
          "default": Object {
            "borderColor": "gray-primary",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "text-primary",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.active": Object {
            "borderColor": "gray-dark",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "text-primary",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.checked": Object {
            "borderColor": "blue-primary",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "blue-primary",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "text-primary",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.checked.active": Object {
            "borderColor": "blue-dark",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "blue-primary",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "text-primary",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.checked.disabled": Object {
            "borderColor": "gray-light",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "gray-primary",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "gray-300",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.checked.disabled.active": Object {
            "borderColor": "blue-dark",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "gray-primary",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "gray-300",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.disabled": Object {
            "borderColor": "gray-light",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "gray-300",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.disabled.active": Object {
            "borderColor": "gray-dark",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "gray-300",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.error": Object {
            "borderColor": "pink-primary",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "text-primary",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.error.active": Object {
            "borderColor": "gray-dark",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "text-primary",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.error.checked": Object {
            "borderColor": "pink-primary",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "pink-primary",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "text-primary",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.error.checked.active": Object {
            "borderColor": "pink-primary",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "pink-primary",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "text-primary",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.error.checked.disabled": Object {
            "borderColor": "gray-light",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "gray-primary",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "gray-300",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.error.checked.disabled.active": Object {
            "borderColor": "pink-primary",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "gray-primary",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "gray-300",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.error.disabled": Object {
            "borderColor": "gray-light",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "gray-300",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.error.disabled.active": Object {
            "borderColor": "gray-dark",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "gray-300",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.error.large": Object {
            "borderColor": "pink-primary",
            "borderRadius": 21,
            "borderWidth": 2,
            "height": 42,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 35,
            "highlightHeight": 70,
            "highlightWidth": 70,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 14,
            "selectHeight": 28,
            "selectWidth": 28,
            "textColor": "text-primary",
            "textFontSize": 18,
            "textFontWeight": "500",
            "textMarginLeft": 14,
            "width": 42,
          },
          "default.error.large.active": Object {
            "borderColor": "gray-dark",
            "borderRadius": 21,
            "borderWidth": 2,
            "height": 42,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 35,
            "highlightHeight": 70,
            "highlightWidth": 70,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 14,
            "selectHeight": 28,
            "selectWidth": 28,
            "textColor": "text-primary",
            "textFontSize": 18,
            "textFontWeight": "500",
            "textMarginLeft": 14,
            "width": 42,
          },
          "default.error.large.checked": Object {
            "borderColor": "pink-primary",
            "borderRadius": 21,
            "borderWidth": 2,
            "height": 42,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 35,
            "highlightHeight": 70,
            "highlightWidth": 70,
            "selectBackgroundColor": "pink-primary",
            "selectBorderRadius": 14,
            "selectHeight": 28,
            "selectWidth": 28,
            "textColor": "text-primary",
            "textFontSize": 18,
            "textFontWeight": "500",
            "textMarginLeft": 14,
            "width": 42,
          },
          "default.error.large.checked.active": Object {
            "borderColor": "pink-primary",
            "borderRadius": 21,
            "borderWidth": 2,
            "height": 42,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 35,
            "highlightHeight": 70,
            "highlightWidth": 70,
            "selectBackgroundColor": "pink-primary",
            "selectBorderRadius": 14,
            "selectHeight": 28,
            "selectWidth": 28,
            "textColor": "text-primary",
            "textFontSize": 18,
            "textFontWeight": "500",
            "textMarginLeft": 14,
            "width": 42,
          },
          "default.error.large.checked.disabled": Object {
            "borderColor": "gray-light",
            "borderRadius": 21,
            "borderWidth": 2,
            "height": 42,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 35,
            "highlightHeight": 70,
            "highlightWidth": 70,
            "selectBackgroundColor": "gray-primary",
            "selectBorderRadius": 14,
            "selectHeight": 28,
            "selectWidth": 28,
            "textColor": "gray-300",
            "textFontSize": 18,
            "textFontWeight": "500",
            "textMarginLeft": 14,
            "width": 42,
          },
          "default.error.large.checked.disabled.active": Object {
            "borderColor": "pink-primary",
            "borderRadius": 21,
            "borderWidth": 2,
            "height": 42,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 35,
            "highlightHeight": 70,
            "highlightWidth": 70,
            "selectBackgroundColor": "gray-primary",
            "selectBorderRadius": 14,
            "selectHeight": 28,
            "selectWidth": 28,
            "textColor": "gray-300",
            "textFontSize": 18,
            "textFontWeight": "500",
            "textMarginLeft": 14,
            "width": 42,
          },
          "default.error.large.disabled": Object {
            "borderColor": "gray-light",
            "borderRadius": 21,
            "borderWidth": 2,
            "height": 42,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 35,
            "highlightHeight": 70,
            "highlightWidth": 70,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 14,
            "selectHeight": 28,
            "selectWidth": 28,
            "textColor": "gray-300",
            "textFontSize": 18,
            "textFontWeight": "500",
            "textMarginLeft": 14,
            "width": 42,
          },
          "default.error.large.disabled.active": Object {
            "borderColor": "gray-dark",
            "borderRadius": 21,
            "borderWidth": 2,
            "height": 42,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 35,
            "highlightHeight": 70,
            "highlightWidth": 70,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 14,
            "selectHeight": 28,
            "selectWidth": 28,
            "textColor": "gray-300",
            "textFontSize": 18,
            "textFontWeight": "500",
            "textMarginLeft": 14,
            "width": 42,
          },
          "default.error.medium": Object {
            "borderColor": "pink-primary",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "text-primary",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.error.medium.active": Object {
            "borderColor": "gray-dark",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "text-primary",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.error.medium.checked": Object {
            "borderColor": "pink-primary",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "pink-primary",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "text-primary",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.error.medium.checked.active": Object {
            "borderColor": "pink-primary",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "pink-primary",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "text-primary",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.error.medium.checked.disabled": Object {
            "borderColor": "gray-light",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "gray-primary",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "gray-300",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.error.medium.checked.disabled.active": Object {
            "borderColor": "pink-primary",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "gray-primary",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "gray-300",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.error.medium.disabled": Object {
            "borderColor": "gray-light",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "gray-300",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.error.medium.disabled.active": Object {
            "borderColor": "gray-dark",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "gray-300",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.error.small": Object {
            "borderColor": "pink-primary",
            "borderRadius": 15,
            "borderWidth": 2,
            "height": 30,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 25,
            "highlightHeight": 50,
            "highlightWidth": 50,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 10,
            "selectHeight": 20,
            "selectWidth": 20,
            "textColor": "text-primary",
            "textFontSize": 14,
            "textFontWeight": "500",
            "textMarginLeft": 10,
            "width": 30,
          },
          "default.error.small.active": Object {
            "borderColor": "gray-dark",
            "borderRadius": 15,
            "borderWidth": 2,
            "height": 30,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 25,
            "highlightHeight": 50,
            "highlightWidth": 50,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 10,
            "selectHeight": 20,
            "selectWidth": 20,
            "textColor": "text-primary",
            "textFontSize": 14,
            "textFontWeight": "500",
            "textMarginLeft": 10,
            "width": 30,
          },
          "default.error.small.checked": Object {
            "borderColor": "pink-primary",
            "borderRadius": 15,
            "borderWidth": 2,
            "height": 30,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 25,
            "highlightHeight": 50,
            "highlightWidth": 50,
            "selectBackgroundColor": "pink-primary",
            "selectBorderRadius": 10,
            "selectHeight": 20,
            "selectWidth": 20,
            "textColor": "text-primary",
            "textFontSize": 14,
            "textFontWeight": "500",
            "textMarginLeft": 10,
            "width": 30,
          },
          "default.error.small.checked.active": Object {
            "borderColor": "pink-primary",
            "borderRadius": 15,
            "borderWidth": 2,
            "height": 30,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 25,
            "highlightHeight": 50,
            "highlightWidth": 50,
            "selectBackgroundColor": "pink-primary",
            "selectBorderRadius": 10,
            "selectHeight": 20,
            "selectWidth": 20,
            "textColor": "text-primary",
            "textFontSize": 14,
            "textFontWeight": "500",
            "textMarginLeft": 10,
            "width": 30,
          },
          "default.error.small.checked.disabled": Object {
            "borderColor": "gray-light",
            "borderRadius": 15,
            "borderWidth": 2,
            "height": 30,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 25,
            "highlightHeight": 50,
            "highlightWidth": 50,
            "selectBackgroundColor": "gray-primary",
            "selectBorderRadius": 10,
            "selectHeight": 20,
            "selectWidth": 20,
            "textColor": "gray-300",
            "textFontSize": 14,
            "textFontWeight": "500",
            "textMarginLeft": 10,
            "width": 30,
          },
          "default.error.small.checked.disabled.active": Object {
            "borderColor": "pink-primary",
            "borderRadius": 15,
            "borderWidth": 2,
            "height": 30,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 25,
            "highlightHeight": 50,
            "highlightWidth": 50,
            "selectBackgroundColor": "gray-primary",
            "selectBorderRadius": 10,
            "selectHeight": 20,
            "selectWidth": 20,
            "textColor": "gray-300",
            "textFontSize": 14,
            "textFontWeight": "500",
            "textMarginLeft": 10,
            "width": 30,
          },
          "default.error.small.disabled": Object {
            "borderColor": "gray-light",
            "borderRadius": 15,
            "borderWidth": 2,
            "height": 30,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 25,
            "highlightHeight": 50,
            "highlightWidth": 50,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 10,
            "selectHeight": 20,
            "selectWidth": 20,
            "textColor": "gray-300",
            "textFontSize": 14,
            "textFontWeight": "500",
            "textMarginLeft": 10,
            "width": 30,
          },
          "default.error.small.disabled.active": Object {
            "borderColor": "gray-dark",
            "borderRadius": 15,
            "borderWidth": 2,
            "height": 30,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 25,
            "highlightHeight": 50,
            "highlightWidth": 50,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 10,
            "selectHeight": 20,
            "selectWidth": 20,
            "textColor": "gray-300",
            "textFontSize": 14,
            "textFontWeight": "500",
            "textMarginLeft": 10,
            "width": 30,
          },
          "default.large": Object {
            "borderColor": "gray-primary",
            "borderRadius": 21,
            "borderWidth": 2,
            "height": 42,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 35,
            "highlightHeight": 70,
            "highlightWidth": 70,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 14,
            "selectHeight": 28,
            "selectWidth": 28,
            "textColor": "text-primary",
            "textFontSize": 18,
            "textFontWeight": "500",
            "textMarginLeft": 14,
            "width": 42,
          },
          "default.large.active": Object {
            "borderColor": "gray-dark",
            "borderRadius": 21,
            "borderWidth": 2,
            "height": 42,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 35,
            "highlightHeight": 70,
            "highlightWidth": 70,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 14,
            "selectHeight": 28,
            "selectWidth": 28,
            "textColor": "text-primary",
            "textFontSize": 18,
            "textFontWeight": "500",
            "textMarginLeft": 14,
            "width": 42,
          },
          "default.large.checked": Object {
            "borderColor": "blue-primary",
            "borderRadius": 21,
            "borderWidth": 2,
            "height": 42,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 35,
            "highlightHeight": 70,
            "highlightWidth": 70,
            "selectBackgroundColor": "blue-primary",
            "selectBorderRadius": 14,
            "selectHeight": 28,
            "selectWidth": 28,
            "textColor": "text-primary",
            "textFontSize": 18,
            "textFontWeight": "500",
            "textMarginLeft": 14,
            "width": 42,
          },
          "default.large.checked.active": Object {
            "borderColor": "blue-dark",
            "borderRadius": 21,
            "borderWidth": 2,
            "height": 42,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 35,
            "highlightHeight": 70,
            "highlightWidth": 70,
            "selectBackgroundColor": "blue-primary",
            "selectBorderRadius": 14,
            "selectHeight": 28,
            "selectWidth": 28,
            "textColor": "text-primary",
            "textFontSize": 18,
            "textFontWeight": "500",
            "textMarginLeft": 14,
            "width": 42,
          },
          "default.large.checked.disabled": Object {
            "borderColor": "gray-light",
            "borderRadius": 21,
            "borderWidth": 2,
            "height": 42,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 35,
            "highlightHeight": 70,
            "highlightWidth": 70,
            "selectBackgroundColor": "gray-primary",
            "selectBorderRadius": 14,
            "selectHeight": 28,
            "selectWidth": 28,
            "textColor": "gray-300",
            "textFontSize": 18,
            "textFontWeight": "500",
            "textMarginLeft": 14,
            "width": 42,
          },
          "default.large.checked.disabled.active": Object {
            "borderColor": "blue-dark",
            "borderRadius": 21,
            "borderWidth": 2,
            "height": 42,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 35,
            "highlightHeight": 70,
            "highlightWidth": 70,
            "selectBackgroundColor": "gray-primary",
            "selectBorderRadius": 14,
            "selectHeight": 28,
            "selectWidth": 28,
            "textColor": "gray-300",
            "textFontSize": 18,
            "textFontWeight": "500",
            "textMarginLeft": 14,
            "width": 42,
          },
          "default.large.disabled": Object {
            "borderColor": "gray-light",
            "borderRadius": 21,
            "borderWidth": 2,
            "height": 42,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 35,
            "highlightHeight": 70,
            "highlightWidth": 70,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 14,
            "selectHeight": 28,
            "selectWidth": 28,
            "textColor": "gray-300",
            "textFontSize": 18,
            "textFontWeight": "500",
            "textMarginLeft": 14,
            "width": 42,
          },
          "default.large.disabled.active": Object {
            "borderColor": "gray-dark",
            "borderRadius": 21,
            "borderWidth": 2,
            "height": 42,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 35,
            "highlightHeight": 70,
            "highlightWidth": 70,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 14,
            "selectHeight": 28,
            "selectWidth": 28,
            "textColor": "gray-300",
            "textFontSize": 18,
            "textFontWeight": "500",
            "textMarginLeft": 14,
            "width": 42,
          },
          "default.medium": Object {
            "borderColor": "gray-primary",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "text-primary",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.medium.active": Object {
            "borderColor": "gray-dark",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "text-primary",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.medium.checked": Object {
            "borderColor": "blue-primary",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "blue-primary",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "text-primary",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.medium.checked.active": Object {
            "borderColor": "blue-dark",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "blue-primary",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "text-primary",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.medium.checked.disabled": Object {
            "borderColor": "gray-light",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "gray-primary",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "gray-300",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.medium.checked.disabled.active": Object {
            "borderColor": "blue-dark",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "gray-primary",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "gray-300",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.medium.disabled": Object {
            "borderColor": "gray-light",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "gray-300",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.medium.disabled.active": Object {
            "borderColor": "gray-dark",
            "borderRadius": 18,
            "borderWidth": 2,
            "height": 36,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 30,
            "highlightHeight": 60,
            "highlightWidth": 60,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 12,
            "selectHeight": 24,
            "selectWidth": 24,
            "textColor": "gray-300",
            "textFontSize": 16,
            "textFontWeight": "500",
            "textMarginLeft": 12,
            "width": 36,
          },
          "default.small": Object {
            "borderColor": "gray-primary",
            "borderRadius": 15,
            "borderWidth": 2,
            "height": 30,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 25,
            "highlightHeight": 50,
            "highlightWidth": 50,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 10,
            "selectHeight": 20,
            "selectWidth": 20,
            "textColor": "text-primary",
            "textFontSize": 14,
            "textFontWeight": "500",
            "textMarginLeft": 10,
            "width": 30,
          },
          "default.small.active": Object {
            "borderColor": "gray-dark",
            "borderRadius": 15,
            "borderWidth": 2,
            "height": 30,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 25,
            "highlightHeight": 50,
            "highlightWidth": 50,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 10,
            "selectHeight": 20,
            "selectWidth": 20,
            "textColor": "text-primary",
            "textFontSize": 14,
            "textFontWeight": "500",
            "textMarginLeft": 10,
            "width": 30,
          },
          "default.small.checked": Object {
            "borderColor": "blue-primary",
            "borderRadius": 15,
            "borderWidth": 2,
            "height": 30,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 25,
            "highlightHeight": 50,
            "highlightWidth": 50,
            "selectBackgroundColor": "blue-primary",
            "selectBorderRadius": 10,
            "selectHeight": 20,
            "selectWidth": 20,
            "textColor": "text-primary",
            "textFontSize": 14,
            "textFontWeight": "500",
            "textMarginLeft": 10,
            "width": 30,
          },
          "default.small.checked.active": Object {
            "borderColor": "blue-dark",
            "borderRadius": 15,
            "borderWidth": 2,
            "height": 30,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 25,
            "highlightHeight": 50,
            "highlightWidth": 50,
            "selectBackgroundColor": "blue-primary",
            "selectBorderRadius": 10,
            "selectHeight": 20,
            "selectWidth": 20,
            "textColor": "text-primary",
            "textFontSize": 14,
            "textFontWeight": "500",
            "textMarginLeft": 10,
            "width": 30,
          },
          "default.small.checked.disabled": Object {
            "borderColor": "gray-light",
            "borderRadius": 15,
            "borderWidth": 2,
            "height": 30,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 25,
            "highlightHeight": 50,
            "highlightWidth": 50,
            "selectBackgroundColor": "gray-primary",
            "selectBorderRadius": 10,
            "selectHeight": 20,
            "selectWidth": 20,
            "textColor": "gray-300",
            "textFontSize": 14,
            "textFontWeight": "500",
            "textMarginLeft": 10,
            "width": 30,
          },
          "default.small.checked.disabled.active": Object {
            "borderColor": "blue-dark",
            "borderRadius": 15,
            "borderWidth": 2,
            "height": 30,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 25,
            "highlightHeight": 50,
            "highlightWidth": 50,
            "selectBackgroundColor": "gray-primary",
            "selectBorderRadius": 10,
            "selectHeight": 20,
            "selectWidth": 20,
            "textColor": "gray-300",
            "textFontSize": 14,
            "textFontWeight": "500",
            "textMarginLeft": 10,
            "width": 30,
          },
          "default.small.disabled": Object {
            "borderColor": "gray-light",
            "borderRadius": 15,
            "borderWidth": 2,
            "height": 30,
            "highlightBackgroundColor": "transparent",
            "highlightBorderRadius": 25,
            "highlightHeight": 50,
            "highlightWidth": 50,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 10,
            "selectHeight": 20,
            "selectWidth": 20,
            "textColor": "gray-300",
            "textFontSize": 14,
            "textFontWeight": "500",
            "textMarginLeft": 10,
            "width": 30,
          },
          "default.small.disabled.active": Object {
            "borderColor": "gray-dark",
            "borderRadius": 15,
            "borderWidth": 2,
            "height": 30,
            "highlightBackgroundColor": "gray-light",
            "highlightBorderRadius": 25,
            "highlightHeight": 50,
            "highlightWidth": 50,
            "selectBackgroundColor": "transparent",
            "selectBorderRadius": 10,
            "selectHeight": 20,
            "selectWidth": 20,
            "textColor": "gray-300",
            "textFontSize": 14,
            "textFontWeight": "500",
            "textMarginLeft": 10,
            "width": 30,
          },
        },
      },
    }
  }
  theme={
    Object {
      "blue-dark": "#2541CC",
      "blue-pitch-dark": "#0D1C2E",
      "blue-primary": "#3366FF",
      "gray-100": "#f7f8fa",
      "gray-200": "#edf0f5",
      "gray-300": "#c8cedb",
      "gray-400": "#a6aebd",
      "gray-dark": "#8992A3",
      "gray-highlight": "#EDF0F5",
      "gray-light": "#DDE1EB",
      "gray-primary": "#A6AEBD",
      "pink-primary": "#FF3D71",
      "text-primary": "#000000",
      "text-primary-inverse": "#ffffff",
    }
  }
>
  <ModalPanel />
</StyleProvider>
`;
